tests/cn/multifile/f.c.test
return code: 1
./f.exec.c:87:18: error: call to undeclared function 'g'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
   87 |       __cn_ret = g((CN_LOAD(x) - 12));
      |                  ^
1 error generated.
Failed to compile 'f.exec.c'.